stylesheets/common/header.css
:root {
    --header-height: 110px;
}

header {
    position: sticky;
    background-color: var(--primary-colour);
    height: var(--header-height);
    width: 100%;
    z-index: 100;
    box-shadow: 0 1px 0 #000;
}

body {
    margin: 0;
}

#logo-div {
    --logo-div-margin: 10px;
    display: block;
    float: left;
    height: calc(var(--header-height) - 2 * var(--logo-div-margin));
    margin: var(--logo-div-margin);
    display: flex;
    flex-direction: row;
    padding-right: 10px;
}

#header-logo {
    height: calc(var(--header-height) - 2 * var(--logo-div-margin));
    width: calc(var(--header-height) - 2 * var(--logo-div-margin));
}



#logo-div p {
    white-space-collapse: preserve;
    margin: 0;
    line-height: calc((var(--header-height) - 2 * var(--logo-div-margin)) / 3); /*One third of logo height*/
    font-size: 27px;
    margin-left: 15px;
    color: var(--primary-contrast);
}

#sign-in-div {
    --sign-in-text-inline-gap: 15px;
    --sign-in-margin: 25px;
    display: block;
    float: right;
    height: calc(var(--header-height) - 2 * var(--sign-in-margin));
    margin: var(--sign-in-margin);
    display: flex;
    align-items: center;
    padding-left: var(--sign-in-text-inline-gap);
    background-color: var(--secondary-colour);
    padding: 0 7.5px 0 15px;
    outline: 1px solid black;
    border-radius: 10px;
}

#sign-in-div > label {
    font-size: 1.3rem;
}

#sign-in-image {
    height: calc(var(--header-height) - 2 * var(--sign-in-margin) - 15px);
    width: calc(var(--header-height) - 2 * var(--sign-in-margin) - 15px);
    margin-left: var(--sign-in-text-inline-gap);
}

#header-dropdown-div {
    --header-dropdown-radius: 10px;
    --header-nav-height: 50px;
    --header-nav-width: 400px;
    position: absolute;
    bottom: 0;
    right: calc(50% - var(--header-nav-width)/2);
    width: var(--header-nav-width);
    height: var(--header-nav-height);
    display: inline-block;
}

#header-dropdown-content {
    display: none;
    position: absolute;
    top: var(--header-nav-height);
    background-color: white;
    min-width: 100%;
    min-height: 100px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    box-sizing: border-box;
    padding: 20px;
    border-radius: 0 0 var(--header-dropdown-radius) var(--header-dropdown-radius);
}

#header-dropdown-content > * {
    display: none;
    width: 100%;
    flex-direction: row;
}

#header-dropdown-div:hover #header-dropdown-content,
#header-dropdown-div:focus-within #header-dropdown-content,
.header-dropdown-show {
    display: block !important;
}

#header-dropdown-div:hover #header-dropdown-content,
#header-dropdown-div:focus-within #header-dropdown-content,
div.header-dropdown-show {
    display: flex !important;
}

#header-dropdown-menu {
    border-radius: var(--header-dropdown-radius) var(--header-dropdown-radius) 0 0;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    height: 100%;
    font-family: var(--header-font-family);
}

#header-dropdown-menu > *:hover, #header-dropdown-menu > *:focus {
    background-color: var(--secondary-hover);
}

#header-dropdown-menu > *:first-of-type {
    border-top-left-radius: inherit;
}

#header-dropdown-menu > *:last-of-type {
    border-top-right-radius: inherit;
}

#header-dropdown-menu > * {
    flex: 1;
    height: 100%;
    font-size: 1.15rem;
    border: 1px solid black;
    border-collapse: collapse;
    background-color: var(--secondary-colour);
}

#header-dropdown-content > div > * {
    flex-grow: 1;
}

#header-dropdown-content li > a {
    color: black;
    text-decoration: none;
}

#header-dropdown-content li > strong {
    color: black;
    font-size: 1.1rem;
    font-family: var(--header-font-family);
}

#header-dropdown-content  *.has-header li:last-of-type:before {
    content: " └ ";
    color: black;
    font-family: monospace;
}

#header-dropdown-content  *.has-header li:not(:last-of-type):not(:first-of-type):before {
    content: " ├ ";
    color: black;
    font-family: monospace;
}

#header-dropdown-content li {
    line-height: 1.18rem;
}

